[package]
name = "stomp"
version = "0.1.0"
authors = ["Jeremy Zheng <jitang.zheng@gmail.com>"]
description = "A full STOMP 1.2 client implementation for the Rust programming language."
homepage = "https://github.com/saturn-xiv/stomp"
license = "MIT"
readme = "README.md"

[dependencies]
log = "0.4"
env_logger = "0.6"